--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -16,9 +16,9 @@
        
     <ul>
     <% for(item of data){%>
-             <li><%=item.cData.title%> ( <%=item.qty%> ) 
+             <li><%=item.id%> <%=item.title%> ( <%=item.CartItem.quantity%> ) 
             <form action="/delete-cart" method="post">
-                <input type="hidden" name="id" value="<%=item.cData.id%>">
+                <input type="hidden" name="id" value="<%=item.id%>">
                 <input type="submit" value="Delete" class="btn">
             </form>
             
