--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -25,7 +25,7 @@
             <img src="<%=data.imageUrl%> " alt="A Book" />
           </div>
           <div class="card__content">
-            <h2 class="product__price"><%=data.price%></h2>
+            <h2 class="product__price"><%=data.price%>$</h2>
             <p class="product__description"><%=data.description%></p>
           </div>
           <div class="card__actions">
