--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -16,7 +16,7 @@
        
     <ul>
     <% for(item of data){%>
-             <li><%=item.id%> <%=item.title%> ( <%=item.CartItem.quantity%> ) 
+             <li> <%=item.title%> ( <%=item.CartItem.quantity%> ) 
             <form action="/delete-cart" method="post">
                 <input type="hidden" name="id" value="<%=item.id%>">
                 <input type="submit" value="Delete" class="btn">
