--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -1,66 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Add Product</title>
-    <link rel="stylesheet" href="/css/main.css" />
-    <link rel="stylesheet" href="/css/forms.css" />
-    <link rel="stylesheet" href="/css/product.css" />
-  </head>
+<%- include('../includes/head.ejs') %>
+    <link rel="stylesheet" href="/css/forms.css">
+    <link rel="stylesheet" href="/css/product.css">
+</head>
 
-  <body>
-    <%-include('../includes/navigation.ejs')-%>
+<body>
+   <%- include('../includes/navigation.ejs') %>
 
     <main>
-      <form
-        class="product-form"
-        action='/admin/<%= editing?"edit-product":"add-product"%>'
-        method="POST"
-      >
-        <div class="form-control">
-          <label for="title">Title</label>
-          <input
-            type="text"
-            name="title"
-            id="title"
-            value="<%=editing?data.title:''%>"
-          />
-        </div>
-        <div class="form-control">
-          <label for="ImageUrl">ImageUrl</label>
-          <input
-            type="text"
-            name="imageUrl"
-            id="ImageUrl"
-            value="<%=editing?data.imageUrl:''%>"
-          />
-        </div>
-        <div class="form-control">
-          <label for="price">Price</label>
-          <input
-            type="number"
-            name="price"
-            id="price"
-            value="<%=editing?data.price:''%>"
-          />
-        </div>
+        <form class="product-form" action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>" method="POST">
+            <div class="form-control">
+                <label for="title">Title</label>
+                <input type="text" name="title" id="title" value="<% if (editing) { %><%= product.title %><% } %>">
+            </div>
+            <div class="form-control">
+                <label for="imageUrl">Image URL</label>
+                <input type="text" name="imageUrl" id="imageUrl" value="<% if (editing) { %><%= product.imageUrl %><% } %>">
+            </div>
+            <div class="form-control">
+                <label for="price">Price</label>
+                <input type="number" name="price" id="price" step="0.01" value="<% if (editing) { %><%= product.price %><% } %>">
+            </div>
+            <div class="form-control">
+                <label for="description">Description</label>
+                <textarea name="description" id="description" rows="5"><% if (editing) { %><%= product.description %><% } %></textarea>
+            </div>
+            <% if (editing) { %>
+                <input type="hidden" value="<%= product.id %>" name="productId">
+            <% } %>
 
-        <div class="form-control">
-          <label for="title">Title</label>
-          <textarea name="description" id="description" cols="40" rows="5">
-<%=editing?data.description:''%></textarea
-          >
-        </div>
-        <%if(editing){%>
-        <input type="hidden" value="<%=data.id%>" name="id" />
-        <%}%>
-
-        <button class="btn" type="submit">
-          <%= editing?"Edit Product":"Add Product"%>
-        </button>
-      </form>
+            <button class="btn" type="submit"><% if (editing) { %>Update Product<% } else { %>Add Product<% } %></button>
+        </form>
     </main>
-  </body>
-</html>
+<%- include('../includes/end.ejs') %>
