--- a/views/includes/add-to-cart.ejs
+++ b/views/includes/add-to-cart.ejs
@@ -1,5 +1,4 @@
-<form action="/add-to-cart" method="post">
-  <input type="hidden" name="product_id" value="<%=data.id%>" />
-  <input type="hidden" name="productPrice" value="<%=data.price%>" />
-  <button type="submit" class="btn">Add to Cart</button>
+<form action="/cart" method="post">
+    <button class="btn" type="submit">Add to Cart</button>
+    <input type="hidden" name="productId" value="<%= product.id %>">
 </form>
