--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,45 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- include('../includes/head.ejs') %>
+    <link rel="stylesheet" href="/css/cart.css">
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>
-        <%=pageTitle%>
-    </title>
-    <link rel="stylesheet" href="/css/main.css">
-</head>
-
-<body>
-    <%-include('../includes/navigation.ejs')-%>
-        <%if(data.length>0){%>
-            <h1>Products</h1>
-
-            <ul>
-                <% for(item of data){%>
-                    <li>
-                        <%=item.title%> (
-                            <%=item.CartItem.quantity%> )
-                                <form action="/delete-cart" method="post">
-                                    <input type="hidden" name="id" value="<%=item.id%>">
-                                    <input type="submit" value="Delete" class="btn">
-                                </form>
-
-                    </li>
-                    <% }%>
-
-            </ul>
-            <hr>
-            <div class="center">
-                <form action="/create-order" method="post">
-
-                    <button type="submit" class="btn">Order Now</button>
-                </form>
-            </div>
-            <%}else{%>
-                <h1>empty cart</h1>
-                <%}%>
-</body>
-
-</html>
+    <body>
+        <%- include('../includes/navigation.ejs') %>
+        <main>
+            <% if (products.length > 0) { %>
+                <ul class="cart__item-list">
+                    <% products.forEach(p => { %>
+                        <li class="cart__item">
+                            <h1><%= p.title %></h1>
+                            <h2>Quantity: <%= p.cartItem.quantity %></h2>
+                            <form action="/cart-delete-item" method="POST">
+                                <input type="hidden" value="<%= p.id %>" name="productId">
+                                <button class="btn danger" type="submit">Delete</button>
+                            </form>
+                        </li>
+                    <% }) %>
+                </ul>
+                <hr>
+                <div class="centered">
+                    <form action="/create-order" method="POST">
+                        <button type="submit" class="btn">Order Now!</button>
+                    </form>
+                </div>
+                
+            <% } else { %>
+                <h1>No Products in Cart!</h1>
+            <% } %>
+        </main>
+        <%- include('../includes/end.ejs') %>
