--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -1,17 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- include('../includes/head.ejs') %>
+    <link rel="stylesheet" href="/css/orders.css">
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title><%=pageTitle%></title>
-    <link rel="stylesheet" href="/css/main.css">
-</head>
-
-<body>
- <%-include('../includes/navigation.ejs')-%>
-    <h1>this is  orders</h1>
-</body>
-
-</html>
+    <body>
+        <%- include('../includes/navigation.ejs') %>
+        <main>
+            <% if (orders.length <= 0) { %>
+                <h1>Nothing there!</h1>
+            <% } else { %>
+                <ul class="orders">
+                    <% orders.forEach(order => { %>
+                        <li class="orders__item">
+                            <h1>Order - # <%= order.id %></h1>
+                            <ul class="orders__products">
+                                <% order.products.forEach(product => { %>
+                                    <li class="orders__products-item"><%= product.title %> (<%= product.orderItem.quantity %>)</li>
+                                <% }); %>
+                            </ul>
+                        </li>
+                    <% }); %>
+                </ul>
+            <% } %>
+        </main>
+        <%- include('../includes/end.ejs') %>
