--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -16,7 +16,7 @@
                                     <%= p.qty %>
                                 </h2>
                                 <form action="/cart-delete-item" method="POST">
-                                    <input type="hidden" value="<%= p._id %>" name="productId">
+                                    <input type="hidden" value="<%= p.productId._id %>" name="productId">
                                     <button class="btn danger" type="submit">Delete</button>
                                 </form>
                             </li>
