--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -15,10 +15,10 @@
                                         <%= order._id %>
                                     </h1>
                                     <ul class="orders__products">
-                                        <% order.items.forEach(product => { %>
+                                        <% order.products.forEach(p => { %>
                                             <li class="orders__products-item">
-                                                <%= product.title %> (
-                                                    <%= product.qty %>)</li>
+                                                <%= p.product.title %> (
+                                                    <%= p.qty %>)</li>
                                             <% }); %>
                                     </ul>
                                 </li>
