--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -23,7 +23,7 @@
                                         <%= product.price %>
                                     </h2>
                                     <p class="product__description">
-                                        <%= product.description %>
+                                        <%= product.description.substring(0, 40)+"..."  %>
                                     </p>
                                 </div>
                                 <div class="card__actions">
