--- a/public/css/main.css
+++ b/public/css/main.css
@@ -224,6 +224,23 @@ form {
   background: red;
   color: white;
 }
+.user-message {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+  width: 90%;
+  border: 1px solid #4771fa;
+  padding: 0.5rem;
+  border-radius: 3px;
+  background: #b9c9ff;
+  text-align: center;
+}
+
+.user-message--error {
+  border-color: red;
+  background: rgb(255, 176, 176);
+  color: red;
+}
 
 @media (min-width: 768px) {
   .main-header__nav {
@@ -232,5 +249,8 @@ form {
 
   #side-menu-toggle {
     display: none;
+  }
+  .user-message {
+    width: 30rem;
   }
 }
