--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -22,6 +22,9 @@
                 <input type="hidden" name="_csrf" value="<%=csrfToken%>">
 
             </div>
+            <%if(errorMessage){%>
+                <p class="user-message user-message--error "><%=errorMessage%></p>
+                <%}%>
             <button class="btn" type="submit">SignUp</button>
         </form>
     </main>
