--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -10,7 +10,7 @@
             <main>
                
                 <form class="login-form" action="/login" method="POST">
-                
+                <h1>Login</h1>
                     <div class="form-control">
                         <label for="email">E-mail</label>
                         <input type="email" name="email" id="email">
