--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -8,6 +8,7 @@
 
     <main>
         <form class="login-form" action="/signup" method="POST">
+            <h1>SignUp</h1>
             <div class="form-control">
                 <label for="email">E-Mail</label>
                 <input type="email" name="email" id="email">
