--- a/views/auth/new-password.ejs
+++ b/views/auth/new-password.ejs
@@ -9,25 +9,27 @@
 
             <main>
                
-                <form class="login-form" action="/login" method="POST">
-                <h1>Login</h1>
-                    <div class="form-control">
-                        <label for="email">E-mail</label>
-                        <input type="email" name="email" id="email">
-                    </div>
+                <form class="login-form" action="/new-password" method="POST">
+                <h1>New Password</h1>
+                  
                     <div class="form-control">
                         <label for="Password">Password</label>
                         <input type="password" name="password" id="password">
-                        <input type="hidden" name="_csrf" value="<%=csrfToken%>">
+                    </div>
+                    <div class="form-control">
+                        <label for="Password">Confrim Password</label>
+                        <input type="password" name="confirmPassword" id="password">
+                        <input type="hidden" name="userId" value="<%=userId%>">
 
                     </div>
+                    <input type="hidden" name="_csrf" value="<%=csrfToken%>">
+
 
                     <%if(errorMessage){%>
                         <div class="user-message user-message--error "><%=errorMessage%></div>
                         <%}%>
-                    <button class="btn" type="submit">Login</button>
-                    <br>
-                    <a href="/reset"> click here to reset password</a>
+                        <button type="submit" class="btn">Update Password</button>
+
                 </form>
                 
             </main>
