--- a/views/auth/new-password.ejs
+++ b/views/auth/new-password.ejs
@@ -23,6 +23,8 @@
 
                     </div>
                     <input type="hidden" name="_csrf" value="<%=csrfToken%>">
+                    <input type="hidden" name="token" value="<%=token%>">
+
 
 
                     <%if(errorMessage){%>
