--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -11,15 +11,20 @@
             <h1>SignUp</h1>
             <div class="form-control">
                 <label for="email">E-Mail</label>
-                <input type="email" name="email" id="email">
+                <input 
+                class="<%=validationError.find(e=>e.path==='email') ? 'invalid':''%>"
+                type="email" 
+                name="email" 
+                id="email" 
+                value="<%=oldInput.email%>">
             </div>
             <div class="form-control">
                 <label for="password">Password</label>
-                <input type="password" name="password" id="password">
+                <input type="password" name="password" id="password" value="<%=oldInput.password%>">
             </div>
             <div class="form-control">
                 <label for="confirmPassword">Confirm Password</label>
-                <input type="password" name="confirmPassword" id="confirmPassword">
+                <input type="password" name="confirmPassword" id="confirmPassword" value="<%=oldInput.confirmPassword%>">
                 <input type="hidden" name="_csrf" value="<%=csrfToken%>">
 
             </div>
