--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -13,11 +13,23 @@
                 <h1>Login</h1>
                     <div class="form-control">
                         <label for="email">E-mail</label>
-                        <input type="email" name="email" id="email">
+                        <input 
+                        class="<%=validationError.find(e=>e.path==='email') ? 'invalid':''%>"
+
+                        type="email"
+                         name="email" 
+                         id="email" 
+                         value="<%=oldInput.email%>">
                     </div>
                     <div class="form-control">
                         <label for="Password">Password</label>
-                        <input type="password" name="password" id="password">
+                        <input 
+                        class="<%=validationError.find(e=>e.path==='email') ? 'invalid':''%>"
+
+                        type="password" 
+                        name="password" 
+                        id="password" 
+                        value="<%=oldInput.password%>">
                         <input type="hidden" name="_csrf" value="<%=csrfToken%>">
 
                     </div>
