--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -20,11 +20,17 @@
             </div>
             <div class="form-control">
                 <label for="password">Password</label>
-                <input type="password" name="password" id="password" value="<%=oldInput.password%>">
+                <input 
+                class="<%=validationError.find(e=>e.path==='email') ? 'invalid':''%>"
+
+                type="password" name="password" id="password" value="<%=oldInput.password%>">
             </div>
             <div class="form-control">
                 <label for="confirmPassword">Confirm Password</label>
-                <input type="password" name="confirmPassword" id="confirmPassword" value="<%=oldInput.confirmPassword%>">
+                <input 
+                                class="<%=validationError.find(e=>e.path==='email') ? 'invalid':''%>"
+
+                type="password" name="confirmPassword" id="confirmPassword" value="<%=oldInput.confirmPassword%>">
                 <input type="hidden" name="_csrf" value="<%=csrfToken%>">
 
             </div>
