adding validation to priduct page

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -24,7 +24,7 @@
                     <div class="form-control">
                         <label for="Password">Password</label>
                         <input 
-                        class="<%=validationError.find(e=>e.path==='email') ? 'invalid':''%>"
+                        class="<%=validationError.find(e=>e.path==='password') ? 'invalid':''%>"
 
                         type="password" 
                         name="password" 
