--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -1,5 +1,6 @@
 <%- include('../includes/head.ejs') %>
     <link rel="stylesheet" href="/css/forms.css">
+    <link rel="stylesheet" href="/css/auth.css">
     <link rel="stylesheet" href="/css/product.css">
     </head>
 
@@ -10,26 +11,29 @@
                 <form class="product-form" action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>" method="POST">
                     <div class="form-control">
                         <label for="title">Title</label>
-                        <input type="text" name="title" id="title" value="<% if (editing) { %><%= product.title %><% } %>">
+                        <input type="text" name="title" id="title" value="<% if (editing || hasError) { %><%= product.title %><% } %>">
                     </div>
                     <div class="form-control">
                         <label for="imageUrl">Image URL</label>
-                        <input type="text" name="imageUrl" id="imageUrl" value="<% if (editing) { %><%= product.imageUrl %><% } %>">
+                        <input type="text" name="imageUrl" id="imageUrl" value="<% if (editing || hasError) { %><%= product.imageUrl %><% } %>">
                     </div>
                     <div class="form-control">
                         <label for="price">Price</label>
-                        <input type="number" name="price" id="price" step="0.01" value="<% if (editing) { %><%= product.price %><% } %>">
+                        <input type="number" name="price" id="price" step="0.01" value="<% if (editing || hasError) { %><%= product.price %><% } %>">
                     </div>
                     <div class="form-control">
                         <label for="description">Description</label>
-                        <textarea name="description" id="description" rows="5"><% if (editing) { %><%= product.description %><% } %></textarea>
+                        <textarea name="description" id="description" rows="5"><% if (editing || hasError) { %><%= product.description %><% } %></textarea>
                         <input type="hidden" name="_csrf" value="<%=csrfToken%>">
 
                     </div>
                     <% if (editing) { %>
                         <input type="hidden" value="<%= product._id %>" name="productId">
                         <% } %>
-
+                        <!-- extrea line added only for testing .... -->
+                        <%if(errorMessage){%>
+                            <div class="user-message user-message--error "><%=errorMessage%></div>
+                            <%}%>
                             <button class="btn" type="submit"><% if (editing) { %>Update Product<% } else { %>Add Product<% } %></button>
                 </form>
             </main>
