--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,8 +1,13 @@
-<%- include('includes/head.ejs') %>
-</head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <%- include('includes/head.ejs') %>
+  </head>
 
-<body>
+  <body>
     <%- include('includes/navigation.ejs') %>
     <h1>Page Not Found!</h1>
 
-<%- include('includes/end.ejs') %>
+    <%- include('includes/end.ejs') %>
+  </body>
+</html>
