--- a/views/auth/new-password.ejs
+++ b/views/auth/new-password.ejs
@@ -1,38 +1,37 @@
-<%- include('../includes/head.ejs') %>
-    <link rel="stylesheet" href="/css/forms.css">
-    <link rel="stylesheet" href="/css/product.css">
-    <link rel="stylesheet" href="/css/auth.css">
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <%- include('../includes/head.ejs') %>
+    <link rel="stylesheet" href="/css/forms.css" />
+    <link rel="stylesheet" href="/css/product.css" />
+    <link rel="stylesheet" href="/css/auth.css" />
+  </head>
 
-    <body>
-        <%- include('../includes/navigation.ejs') %>
+  <body>
+    <%- include('../includes/navigation.ejs') %>
 
-            <main>
-               
-                <form class="login-form" action="/new-password" method="POST">
-                <h1>New Password</h1>
-                  
-                    <div class="form-control">
-                        <label for="Password">Password</label>
-                        <input type="password" name="password" id="password">
-                    </div>
-                    <div class="form-control">
-                        <label for="Password">Confrim Password</label>
-                        <input type="password" name="confirmPassword" id="password">
-                        <input type="hidden" name="userId" value="<%=userId%>">
+    <main>
+      <form class="login-form" action="/new-password" method="POST">
+        <h1>New Password</h1>
 
-                    </div>
-                    <input type="hidden" name="_csrf" value="<%=csrfToken%>">
-                    <input type="hidden" name="token" value="<%=token%>">
+        <div class="form-control">
+          <label for="Password">Password</label>
+          <input type="password" name="password" id="password" />
+        </div>
+        <div class="form-control">
+          <label for="Password">Confrim Password</label>
+          <input type="password" name="confirmPassword" id="password" />
+          <input type="hidden" name="userId" value="<%=userId%>" />
+        </div>
+        <input type="hidden" name="_csrf" value="<%=csrfToken%>" />
+        <input type="hidden" name="token" value="<%=token%>" />
 
-
-
-                    <%if(errorMessage){%>
-                        <div class="user-message user-message--error "><%=errorMessage%></div>
-                        <%}%>
-                        <button type="submit" class="btn">Update Password</button>
-
-                </form>
-                
-            </main>
-            <%- include('../includes/end.ejs') %>
+        <%if(errorMessage){%>
+        <div class="user-message user-message--error"><%=errorMessage%></div>
+        <%}%>
+        <button type="submit" class="btn">Update Password</button>
+      </form>
+    </main>
+    <%- include('../includes/end.ejs') %>
+  </body>
+</html>
