--- a/views/auth/resetPass.ejs
+++ b/views/auth/resetPass.ejs
@@ -1,28 +1,32 @@
-<%- include('../includes/head.ejs') %>
-    <link rel="stylesheet" href="/css/forms.css">
-    <link rel="stylesheet" href="/css/product.css">
-    <link rel="stylesheet" href="/css/auth.css">
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <%- include('../includes/head.ejs') %>
+    <link rel="stylesheet" href="/css/forms.css" />
+    <link rel="stylesheet" href="/css/product.css" />
+    <link rel="stylesheet" href="/css/auth.css" />
+  </head>
 
-    <body>
-        <%- include('../includes/navigation.ejs') %>
+  <body>
+    <%- include('../includes/navigation.ejs') %>
 
-            <main>
-               
-                <form class="login-form" action="/reset" method="POST">
-                <h1>Reset</h1>
-                    <div class="form-control">
-                        <label for="email">E-mail</label>
-                        <input type="email" name="email" id="email">
-                    </div>
-                    <div class="form-control">
-                        <input type="hidden" name="_csrf" value="<%=csrfToken%>">
-                    </div>
+    <main>
+      <form class="login-form" action="/reset" method="POST">
+        <h1>Reset</h1>
+        <div class="form-control">
+          <label for="email">E-mail</label>
+          <input type="email" name="email" id="email" />
+        </div>
+        <div class="form-control">
+          <input type="hidden" name="_csrf" value="<%=csrfToken%>" />
+        </div>
 
-                    <%if(errorMessage){%>
-                        <div class="user-message user-message--error "><%=errorMessage%></div>
-                        <%}%>
-                    <button class="btn" type="submit">Reset Password</button>
-                </form>
-            </main>
-            <%- include('../includes/end.ejs') %>
+        <%if(errorMessage){%>
+        <div class="user-message user-message--error"><%=errorMessage%></div>
+        <%}%>
+        <button class="btn" type="submit">Reset Password</button>
+      </form>
+    </main>
+    <%- include('../includes/end.ejs') %>
+  </body>
+</html>
