--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,43 +1,54 @@
-<%- include('../includes/head.ejs') %>
-    <link rel="stylesheet" href="/css/forms.css">
-    <link rel="stylesheet" href="/css/auth.css">
-</head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <%- include('../includes/head.ejs') %>
+    <link rel="stylesheet" href="/css/forms.css" />
+    <link rel="stylesheet" href="/css/auth.css" />
+  </head>
 
-<body>
-   <%- include('../includes/navigation.ejs') %>
+  <body>
+    <%- include('../includes/navigation.ejs') %>
 
     <main>
-        <form class="login-form" action="/signup" method="POST" >
-            <h1>SignUp</h1>
-            <div class="form-control">
-                <label for="email">E-Mail</label>
-                <input 
-                class="<%=validationError.find(e=>e.path==='email') ? 'invalid':''%>"
-                type="email" 
-                name="email" 
-                id="email" 
-                value="<%=oldInput.email%>">
-            </div>
-            <div class="form-control">
-                <label for="password">Password</label>
-                <input 
-                class="<%=validationError.find(e=>e.path==='password') ? 'invalid':''%>"
-
-                type="password" name="password" id="password" value="<%=oldInput.password%>">
-            </div>
-            <div class="form-control">
-                <label for="confirmPassword">Confirm Password</label>
-                <input 
-                                class="<%=validationError.find(e=>e.path==='confirmPassword') ? 'invalid':''%>"
-
-                type="password" name="confirmPassword" id="confirmPassword" value="<%=oldInput.confirmPassword%>">
-                <input type="hidden" name="_csrf" value="<%=csrfToken%>">
-
-            </div>
-            <%if(errorMessage){%>
-                <p class="user-message user-message--error "><%=errorMessage%></p>
-                <%}%>
-            <button class="btn" type="submit">SignUp</button>
-        </form>
+      <form class="login-form" action="/signup" method="POST">
+        <h1>SignUp</h1>
+        <div class="form-control">
+          <label for="email">E-Mail</label>
+          <input
+            class="<%=validationError.find(e=>e.path==='email') ? 'invalid':''%>"
+            type="email"
+            name="email"
+            id="email"
+            value="<%=oldInput.email%>"
+          />
+        </div>
+        <div class="form-control">
+          <label for="password">Password</label>
+          <input
+            class="<%=validationError.find(e=>e.path==='password') ? 'invalid':''%>"
+            type="password"
+            name="password"
+            id="password"
+            value="<%=oldInput.password%>"
+          />
+        </div>
+        <div class="form-control">
+          <label for="confirmPassword">Confirm Password</label>
+          <input
+            class="<%=validationError.find(e=>e.path==='confirmPassword') ? 'invalid':''%>"
+            type="password"
+            name="confirmPassword"
+            id="confirmPassword"
+            value="<%=oldInput.confirmPassword%>"
+          />
+          <input type="hidden" name="_csrf" value="<%=csrfToken%>" />
+        </div>
+        <%if(errorMessage){%>
+        <p class="user-message user-message--error"><%=errorMessage%></p>
+        <%}%>
+        <button class="btn" type="submit">SignUp</button>
+      </form>
     </main>
-<%- include('../includes/end.ejs') %>
+    <%- include('../includes/end.ejs') %>
+  </body>
+</html>
