--- a/views/500.ejs
+++ b/views/500.ejs
@@ -6,9 +6,12 @@
 
   <body>
     <%- include('includes/navigation.ejs') %>
-    <h1>Some Error Occured!</h1>
-    <p>something went wrong, sorry for inconvenience we are  working on it to fix it</p>
-
+    <div style="margin: auto; width: 80%;">
+        <h1>Some Error Occured!</h1>
+        <p>something went wrong, sorry for inconvenience we are  working on it to fix it</p>
+        <pre style="color: red;">Message:<%=Error.msg%></pre>
+        <pre style="color: red;">Status Code:<%=Error.statusCode%></pre>
+    </div>
     <%- include('includes/end.ejs') %>
   </body>
 </html>
